ci(native-image): add native image github action

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -18,3 +18,30 @@ jobs:
         with:
           dependencies-cache-enabled: true
           arguments: check --info --no-daemon --stacktrace
+
+  native-images:
+    runs-on: ubuntu-20.04
+    strategy:
+      matrix:
+        os: [ ubuntu-latest, macos-latest, windows-latest ]
+        gu-binary: [ gu, gu.cmd ]
+        exclude:
+          - os: ubuntu-latest
+            gu-binary: gu.cmd
+          - os: macos-latest
+            gu-binary: gu.cmd
+          - os: windows-latest
+            gu-binary: gu
+    steps:
+      - name: GraalVM Setup
+        uses: DeLaGuardo/setup-graalvm@master
+        with:
+          graalvm-version: '21.0.0.java11'
+      - name: Install Native-Image
+        run: |
+          ${{ matrix.gu-binary }} install native-image
+      - uses: eskatos/gradle-command-action@v1
+        with:
+          dependencies-cache-enabled: true
+          arguments: nativeImage
+
