--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -23,15 +23,13 @@ jobs:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        os: [ ubuntu-latest, macos-latest, windows-latest ]
+        os: [ ubuntu-latest, macos-latest ]
         gu-binary: [ gu, gu.cmd ]
         exclude:
           - os: ubuntu-latest
             gu-binary: gu.cmd
           - os: macos-latest
             gu-binary: gu.cmd
-          - os: windows-latest
-            gu-binary: gu
     steps:
       - uses: actions/checkout@v2
       - name: GraalVM Setup
