--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -8,13 +8,13 @@ on:
       - main
 jobs:
   gradle-check:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-24.04
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-java@v1
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
         with:
-          java-version: '15'
-      - uses: eskatos/gradle-command-action@v1
-        with:
-          dependencies-cache-enabled: true
-          arguments: check --info --no-daemon --stacktrace
+          java-version: '21'
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v3
+      - name: Running Tests
+        run: ./gradlew check --info --no-daemon --stacktrace
